Add CI/CD workflows for MongoDB, frontend, and user services; refactor frontend and user service scripts; update package dependencies and HTML references.

--- a/frontend-gateway/public/index.html
+++ b/frontend-gateway/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Cloud‑Native Todo App</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <div class="container">
@@ -33,6 +33,6 @@
     </section>
   </div>
 
-  <script src="/js/script.js"></script>
+  <script src="/script.js"></script>
 </body>
 </html>
